--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,11 @@
         }
         
     </ul>
-    <app-tasks [name]="selectedUser ? selectedUser.name : '' " />
+
+    @if (selectedUser) {
+        <app-tasks [name]="selectedUser!.name" />
+    } @else {
+            <p id="fallback">Select a user to see their tasks</p>
+    }
+    
 </main>
