task component add distinct

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,1 +1,9 @@
-<h2>A Task</h2>
+<article>
+    <h2>TASK TITLE</h2>
+    <time>TIME</time>
+    <p>SUMMARY</p>
+    <p class="actions">
+        <button>Complete</button>
+    </p>
+</article>
+
