--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -9,9 +9,11 @@
     </header>
 
     <ul>
-        <li>
-            
-        </li>
+        @for (task of selectedUserTasks; track task.id) {
+            <li>
+                <app-task />
+            </li>
+        }
     </ul>
 </section>
 
