add task component

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,12 @@
+@if (isAddingTask) {
+    <app-new-task></app-new-task>
+}
+
 <section id = "tasks">
     <header>
         <h2> {{name}}'s Tasks</h2>
         <menu>
-            <button>
+            <button (click)="onStartAddTask()">
                 Add Task
             </button>
         </menu>
@@ -11,7 +15,7 @@
     <ul>
         @for (task of selectedUserTasks; track task.id) {
             <li>
-                <app-task [task]="task" />
+                <app-task [task]="task" (complete)="onCompleteTask($event)" />
             </li>
         }
     </ul>
